SUBDIRS = XML

INCLUDES = -I$(srcdir)/..

OpenFDMincludedir = $(includedir)/OpenFDM

lib_LTLIBRARIES = libOpenFDM.la

# Will need these at the moment ...
nobase_OpenFDMinclude_HEADERS = \
  AeroForce.h \
  AirSpring.h \
  Assert.h \
  Atmosphere.h \
  AtmosphereSTD1976.h \
  Atomic.h \
  Bias.h \
  BinaryFunctionModel.h \
  CartesianActuatorFrame.h \
  CartesianJointFrame.h \
  Connection.h \
  Contact.h \
  ConstModel.h \
  ConstFrameVisitor.h \
  CowPtr.h \
  DeadBand.h \
  DefaultGravity.h \
  DefaultGround.h \
  DefaultPlanet.h \
  DiscBrake.h \
  DiscreteIntegrator.h \
  DoPri5.h \
  Environment.h \
  EnvironmentObject.h \
  ExplicitAdams.h \
  ExplicitEuler.h \
  ExternalForceModel.h \
  Force.h \
  Frame.h \
  FrameVisitor.h \
  Function.h \
  Gain.h \
  Gravity.h \
  Ground.h \
  GroupInput.h \
  GroupOutput.h \
  Input.h \
  Integrator.h \
  Interact.h \
  ImplicitEuler.h \
  Inertia.h \
  Joint.h \
  Launchbar.h \
  Limits.h \
  LinAlg/Algorithm.h \
  LinAlg/Array.h \
  LinAlg/Base.h \
  LinAlg/Container.h \
  LinAlg/Expressions.h \
  LinAlg/IO.h \
  LinAlg/Misc.h \
  LinAlg/Proxy.h \
  LinearSpringDamper.h \
  LogStream.h \
  Mass.h \
  Math.h \
  Matrix.h \
  MaxModel.h \
  MidpointRule.h \
  MinModel.h \
  MobileRootJoint.h \
  MobileRootJointFrame.h \
  Model.h \
  ModelGroup.h \
  ModelVisitor.h \
  Mutex.h \
  Newton.h \
  NumericPortAcceptor.h \
  NumericPortProvider.h \
  NumericPortProxy.h \
  Object.h \
  ODESolver.h \
  OpenFDMConfig.h \
  Output.h \
  Plane.h \
  Planet.h \
  Port.h \
  PortAcceptor.h \
  PortProvider.h \
  Product.h \
  PrismaticJoint.h \
  PrismaticJointFrame.h \
  Quaternion.h \
  ReaderWriter.h \
  Referenced.h \
  RevoluteActuator.h \
  RevoluteActuatorFrame.h \
  RevoluteJoint.h \
  RevoluteJointFrame.h \
  RigidBody.h \
  Rotation.h \
  RootFrame.h \
  SampleTime.h \
  Saturation.h \
  ScopeLock.h \
  Sensor.h \
  SharedPtr.h \
  SimpleContact.h \
  SimpleGear.h \
  StateStream.h \
  Summer.h \
  System.h \
  Table.h \
  TableData.h \
  Tailhook.h \
  Tank.h \
  TaskInfo.h \
  TimeDerivative.h \
  TransferFunction.h \
  Transform.h \
  Turbulence.h \
  TypeInfo.h \
  Types.h \
  UnaryFunctionModel.h \
  Units.h \
  Variant.h \
  Vector.h \
  Vehicle.h \
  WeakPtr.h \
  WeakReferenced.h \
  WheelContact.h \
  Wind.h \
  XMLDumpModelVisitor.h

libOpenFDM_la_SOURCES = \
  AeroForce.cpp \
  AirSpring.cpp \
  Assert.cpp \
  Atmosphere.cpp \
  AtmosphereSTD1976.cpp \
  Atomic.cpp \
  Bias.cpp \
  BinaryFunctionModel.cpp \
  Connection.cpp \
  Contact.cpp \
  ConstModel.cpp \
  DeadBand.cpp \
  DefaultGravity.cpp \
  DefaultGround.cpp \
  DefaultPlanet.cpp \
  DiscBrake.cpp \
  DiscreteIntegrator.cpp \
  DoPri5.cpp \
  Environment.cpp \
  EnvironmentObject.cpp \
  ExplicitAdams.cpp \
  ExplicitEuler.cpp \
  ExternalForceModel.cpp \
  Force.cpp \
  Frame.cpp \
  Function.cpp \
  Gain.cpp \
  Gravity.cpp \
  Ground.cpp \
  GroupInput.cpp \
  GroupOutput.cpp \
  Input.cpp \
  Integrator.cpp \
  Interact.cpp \
  ImplicitEuler.cpp \
  Joint.cpp \
  Launchbar.cpp \
  LinearSpringDamper.cpp \
  Logger.cpp \
  Mass.cpp \
  MaxModel.cpp \
  MidpointRule.cpp \
  MinModel.cpp \
  MobileRootJoint.cpp \
  Model.cpp \
  ModelGroup.cpp \
  Newton.cpp \
  Object.cpp \
  ODESolver.cpp \
  Output.cpp \
  Planet.cpp \
  Port.cpp \
  PortAcceptor.cpp \
  PortProvider.cpp \
  PrismaticJoint.cpp \
  Product.cpp \
  ReaderWriter.cpp \
  RevoluteActuator.cpp \
  RevoluteJoint.cpp \
  RigidBody.cpp \
  RootFrame.cpp \
  SampleTime.cpp \
  Saturation.cpp \
  SimpleContact.cpp \
  SimpleGear.cpp \
  Summer.cpp \
  System.cpp \
  Table.cpp \
  Tailhook.cpp \
  Tank.cpp \
  TaskInfo.cpp \
  TimeDerivative.cpp \
  TransferFunction.cpp \
  UnaryFunctionModel.cpp \
  Units.cpp \
  Variant.cpp \
  Vehicle.cpp \
  WheelContact.cpp
